--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dev": "tsx src/main.ts",
     "build": "tsc",
     "start": "node dist/main.js",
+    "test-bling": "tsx src/teste-bling.ts",
     "lint": "eslint . --ext .ts"
   },
   "keywords": [
